Fix email button wrapping to two lines

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -1672,6 +1672,10 @@ body.single, body.page {
 				&.active {
 					color: @darkGray !important;
 				}
+				&.action {
+					width: auto;
+					overflow: visible;
+				}
 			}
 		}
 	}
